fix: adjacent menu button alignment

--- a/src/less/mixins/private/dropdown-mixins.less
+++ b/src/less/mixins/private/dropdown-mixins.less
@@ -9,6 +9,7 @@
     .box-shadow-token(~"@{component}-box-shadow", dropdown-box-shadow);
     box-sizing: border-box;
     display: none;
+    left: 0;
     max-height: 400px;
     min-width: 100%;
     overflow-y: auto;
